# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-09-23 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_service_funnel configuration argument
      receive_only for limiting the nodes responsible for sending

2020-09-22 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_funnel selection of the sending process
    * Add the cloudi_service_funnel configuration arguments
      init_delay and node_delay for delaying CRDT data initialization
      until all service processes are ready
    * Add the function cloudi_crdt:crdt_size/1 for determining
      key/value consistency based on #crdt_event{} messages

2020-09-21 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_funnel handling of concurrent duplicate requests
    * Improve cloudi_crdt comments

2020-09-19 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_crdt comments

2020-09-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_service_cron configuration argument
      request_info_default for simplifying send_args_info use

2020-09-17 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_cron expressions arguments features:
        * send_args_info to transform a list of string key/value tuples
          provided as the RequestInfo with data specific to the
          cron expression's event as text_pairs data
        * send_mcast to send each event using mcast_async
    * Add cloudi_service_shell interpretation of RequestInfo data
      as text_pairs info logged as shell comments to describe the Request
    * Change cloudi_string:term_to_binary_compact/1 and
      cloudi_string:term_to_list_compact/1 to output unicode
    * Update jsx

2020-09-06 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_funnel for providing coordination
      among duplicate service requests that receive a single response